src/main/java/com/example/petfinder/error/exception/notFound/AnimalImageNotFoundException.java
package com.example.petfinder.error.exception.notFound;

public class AnimalImageNotFoundException extends RuntimeException{

    public AnimalImageNotFoundException(Long id) {
        super("Animal image id not found: " + id);
    }
}
